# motavadala_1

./: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: frontend.yml  rust.yml
.sqlx/: query-910547de443669a010d13b40d6240d6a39da71ecdac07eb6a9a27af3df1d95f0.json  query-ccd05229fa3dddf70312431ecb92baaf5fd0d1d804156f0d9ade895c92a9ce49.json
backend/: .gitignore
backend/.sqlx/: query-a134f9a0b76cf9d5e10f5b15f82986c52c61ba89d9f16ce3443b58a45a8dec47.json  query-d8a652533d645f4a266c2cb45f96d3c61209067d577e43091efc4174d88271b5.json  query-dd857363eebf1f6ceb64e7a18d9ee42fd8f699aa1ffe33e8cc773cb1e92f6469.json
backend/migrations/: 20250508190149_create_initial_tables.sql
backend/src/: auth.rs
backend/src/handlers/: auth_handler.rs  auth_handler_test.rs  receipt_handler.rs  user_handler.rs
backend/src/services/: email_service.rs  mod.rs  receipt_service.rs  user_service.rs
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  errors.rs
frontend/src/handlers/: mod.rs  whatsapp_handler.rs
frontend/src/routes/: +layout.svelte
frontend/src/services/: pdf_service.rs
src/: main.rs  models.rs
src/handlers/: auth_handler.rs
src/handlers/admin/: mod.rs  receipt_handler.rs
src/lib/components/: Footer.svelte  Navbar.svelte
src/lib/stores/: authStore.ts
src/routes/: +layout.svelte
src/routes/dashboard/: +page.svelte
src/routes/login/: +page.svelte
src/services/: user_service.rs
(+6 files in other folders)
