[package]
name = "receipt_management_serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.31", features = ["serde"] }
lettre = { version = "0.11.3", features = ["tokio1-native-tls", "builder"] }
lettre_email = "0.9.4"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "migrate" ] }
# shuttle-sqlx = { version = "0.43.0", features = ["sqlite"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }
printpdf = "0.6.0"
time = "0.3.41"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
bcrypt = "0.17.0"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"

